# api/swagger/swagger.json
@@ -1850,10 +1850,6 @@
                 "id"
             ],
             "properties": {
-                "config": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
                 "driver": {
                     "type": "string"
                 },
@@ -1865,6 +1861,10 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "specs": {
+                    "type": "object",
+                    "additionalProperties": {}
                 }
             }
         },
@@ -1920,10 +1920,6 @@
                 "type"
             ],
             "properties": {
-                "attrs": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
                 "dataType": {
                     "type": "string"
                 },
@@ -1940,12 +1936,7 @@
                     "type": "integer"
                 },
                 "specs": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
-                "thresholds": {
-                    "type": "object",
-                    "additionalProperties": {}
+                    "$ref": "#/definitions/entity.SensorSpecs"
                 },
                 "type": {
                     "type": "string"
@@ -1975,8 +1966,45 @@
                 "value": {}
             }
         },
+        "entity.SensorSpecs": {
+            "type": "object",
+            "properties": {
+                "max": {
+                    "type": "number"
+                },
+                "maxLen": {
+                    "type": "integer"
+                },
+                "min": {
+                    "type": "number"
+                },
+                "step": {
+                    "type": "number"
+                },
+                "thresholds": {
+                    "$ref": "#/definitions/entity.SpecsThresholds"
+                },
+                "values": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "entity.SensorUpdateRequest": {
             "type": "object"
+        },
+        "entity.SpecsThresholds": {
+            "type": "object",
+            "properties": {
+                "max": {
+                    "type": "number"
+                },
+                "min": {
+                    "type": "number"
+                }
+            }
         },
         "service.DeviceParameters": {
             "type": "object",
